--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,16 @@ title: Unapologetic Snippets
 description: "Crazy Talk: My Disturbing Thoughts Won’t Go Away. What Do I Do?"
 repository: igorlima/unapologetic-snippets # for github-metadata
 theme: just-the-docs
+# remote_theme: just-the-docs/just-the-docs@v0.4.2
+# remote_theme: just-the-docs/just-the-docs
 
+# the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/unapologetic-snippets" # the subpath of your site, e.g. /blog
-url: "https://igorlima.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://igorlima.github.io/unapologetic-snippets"
 
 aux_links:
-  Template Repository: https://github.com/igorlima/unapologetic-snippets
+  Github: https://github.com/igorlima/unapologetic-snippets
+
+nav_external_links:
+  - title: Snippets on GitHub
+    url: https://github.com/igorlima/unapologetic-snippets
