Add TOC in few pages

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -7,5 +7,5 @@ aux_links:
   Github: https://github.com/igorlima/unapologetic-snippets
 
 nav_external_links:
-  - title: Snippets on GitHub
-    url: https://github.com/igorlima/unapologetic-snippets
+  - title: Just the Docs
+    url: https://just-the-docs.github.io/just-the-docs/
