--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,7 @@ aux_links:
   Github: https://github.com/igorlima/unapologetic-snippets
 
 nav_external_links:
+  - title: Unapologetic Thoughts
+    url: https://igorlima.github.io/unapologetic-thoughts/
   - title: Just the Docs
     url: https://just-the-docs.github.io/just-the-docs/
