--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -8,6 +8,6 @@ aux_links:
 
 nav_external_links:
   - title: Unapologetic Thoughts
-    url: https://igorlima.github.io/unapologetic-thoughts/
+    url: http://thoughts.ilima.xyz/
   - title: Just the Docs
     url: https://just-the-docs.github.io/just-the-docs/
