--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -6,6 +6,13 @@ theme: just-the-docs
 aux_links:
   Github: https://github.com/igorlima/unapologetic-snippets
 
+exclude:
+  - my-env-jupyter/
+  - docs/algorithms-data-structures/snippets/
+
+include:
+  - docs/algorithms-data-structures/snippets/index.md
+
 nav_external_links:
   - title: Unapologetic Thoughts
     url: http://thoughts.ilima.xyz/
